<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ImageCache</string>
    <string name="app_label">ImageCache</string>
    <string name="search_hint">Search Google Images</string>
    <string name="action_settings">Settings</string>

    <string name="pref_search_settings">Search Settings</string>
    <string name="max_search_results">Maximum number of search results</string>
    <string name="max_search_results_summary">Current value is $1</string>

    <string name="pref_cache_settings">Cache Settings</string>

    <string name="cache_algorithm">Cache Algorithm</string>
    <string name="cache_algorithm_summary">Set the caching algorithm</string>

    <string name="number_of_images">Number of images in cache</string>
    <string name="number_of_images_summary">Current value is $2</string>


    <string name="textview_text">SeekBarPreference test</string>
    <string name="settings_summary">Current value is $1</string>
    <string name="settings_unit">Km</string>
    <string name="settings_title">Here comes the title</string>


    number of images it holds


    <string name="settings_dialog_message">Here comes a message</string>
    <string name="title_activity_image_view">ImageViewActivity</string>

</resources>
